force-app/main/default/objects/HAM_Board_Dashboard_Data__c/HAM_Board_Dashboard_Data__c.object-meta.xml
<CustomObject>
    <description>An object that contains data pushed to Hamilton College&apos;s data warehouse for reporting in a board dashboard:

Included are:
-HF Collected Last 5 FYs
-Total Commitments Last 5 FYs (includes BQI)
-Total Cash Collected last 5 FYs

5 Years Career Center Outcomes 
% employed in job or internship
% attending graduate school
% pursuing post-grad fellowship
% searching for jobs

5 Years of 
Employment Fields

Internships FY-based (Up/Down arrow)
5 Years - Number of Internships students reported during their time at Hamilton
Number of Career Related Experiences
0,1,2,3,4+</description>
    <label>Board Dashboard Data</label>
    <nameField>
        <label>Board Dashboard Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Dashboard Datapoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>