force-app/main/default/objects/HAM_Board_Dashboard_Data__c/fields/HAM_Comments__c.field-meta.xml
<CustomField>
    <fullName>HAM_Comments__c</fullName>
    <description>Any contextual or other comments for this slate of reporting.</description>
    <inlineHelpText>Any contextual or other comments for this slate of reporting.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>