force-app/main/default/objects/HAM_Board_Dashboard_Data__c/fields/HAM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_End_Date__c</fullName>
    <description>The effective end date for this board data to be referenced.</description>
    <inlineHelpText>The effective end date for this board data to be referenced.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>