force-app/main/default/objects/HAM_Board_Dashboard_Data__c/fields/HAM_SLT_Approved__c.field-meta.xml
<CustomField>
    <fullName>HAM_SLT_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approved by the Senior Leadership Team in Advancement for reporting to the board?</description>
    <inlineHelpText>Approved by the Senior Leadership Team in Advancement for reporting to the board?</inlineHelpText>
    <label>SLT Approved?</label>
    <type>Checkbox</type>
</CustomField>