force-app/main/default/objects/HAM_Board_Dashboard_Data__c/fields/HAM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Start_Date__c</fullName>
    <description>The effective start date for this board data to be referenced.</description>
    <inlineHelpText>The effective start date for this board data to be referenced.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>