force-app/main/default/objects/HAM_Board_Dashboard_Data__c/fields/HAM_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Status__c</fullName>
    <description>If there is an end-date this is a former data record, otherwise this is current.</description>
    <formula>IF(ISNULL(HAM_End_Date__c),
&quot;Current&quot;,
&quot;Former&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If there is an end-date this is a former data record, otherwise this is current.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>